皮卡丘寫完home.js

--- a/views/share/head_link.ejs
+++ b/views/share/head_link.ejs
@@ -8,3 +8,4 @@ crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.7.0.js"
 integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="css/vg.css">
+<script src="js/vg.js"></script>
