--- a/views/share/header.ejs
+++ b/views/share/header.ejs
@@ -1,13 +1,16 @@
-<a href="#user" class="icon" id="navUser">
-    <i class="fa-solid fa-user"></i>
-</a>
 <nav id="main-nav">
+    <a href="#user" class="icon" id="navUser">
+        <i class="fa-solid fa-user"></i>
+    </a>
     <a class="icon cart-button" id="navCart">
         <span class="bag-count">3</span>
-        <span class="bag-icon"><i class="fa-solid fa-cart-shopping img-fluid"></i></span>
+        <span>
+            <i class="fa-solid fa-cart-shopping img-fluid"></i>
+        </span>
         <!-- <span class="bag-label">View Bag</span> -->
     </a>
 </nav>
+
 <aside id="sidebar-cart">
     <main>
         <a href="#" class="close-button"><i class="fa-solid fa-xmark"></i></a>
@@ -93,13 +96,12 @@
 <div id="sidebar-cart-curtain"></div>
 </div>
 <div class="vg-nav" id="vg-navbar">
-    <a href="/" class="p-3 btn-vg-2 btn-vg-2-active" id="home">LOGO</a>
-    <a href="/about" class="p-3 btn-vg-2" id="about">關於我們</a>
-    <a href="#news" class="p-3 btn-vg-2" id="news">最新消息</a>
-    <a href="#product" class="p-3 btn-vg-2" id="contact">訂閱蔬果箱</a>
-    <a href="#blog" class="p-3 btn-vg-2" id="blog">蔬果專欄</a>
-    <a href="/qna" class="p-3 btn-vg-2" id="qna">常見QA</a>
-
+    <a href="/" class="vg-nav-logo btn-vg-2-active">LOGO</a>
+    <a href="/about" class="btn-vg-2">關於我們</a>
+    <a href="#news" class="btn-vg-2">最新消息</a>
+    <a href="/contact" class="btn-vg-2">訂閱蔬果箱</a>
+    <a href="#blog" class="btn-vg-2">蔬果專欄</a>
+    <a href="/qna" class="btn-vg-2">常見QA</a>
     <a href="javascript:void(0);" class="icon" onclick="myDropNav1()">
         <i class="fa fa-bars"></i>
     </a>
