--- a/lib/css/cart.css
+++ b/lib/css/cart.css
@@ -15,7 +15,6 @@
 
 }
 
-
 /* ↓↓↓評價訂單↓↓↓ */
 #rateorder {
     width: 80%;
@@ -215,6 +214,30 @@ div[class*="float-end"] input,
 
 
 /* ↓↓↓購物車↓↓↓ */
+
+#cnotemodal{
+    margin-top: 20vh;
+    z-index: 1080;
+}
+
+.close-btn {
+    position: absolute;
+    top: 0px;
+    right: -4px;
+    padding: 0.2rem 0.4rem; 
+    color: #000; 
+    /* background-color: transparent;  */
+    /* border: 1px solid #82828233; */
+    border-radius: 50%; 
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    background-color: #ee8989; 
+    color: #fff; 
+    border: none;
+}
+
 
 #orderitems>div {
     /* background-color: #ccdcac; */
