--- a/views/orderconfirm.ejs
+++ b/views/orderconfirm.ejs
@@ -129,7 +129,24 @@
                 <script src="js/cart.js"></script>
                 <script>
                     // 設定使用者
-                    var uid = 2;
+                    var userData = localStorage.getItem('token');
+                        console.log(userData)
+                        if (userData !== null) {
+                            var userToken = userData ? JSON.parse(userData) : false;
+                            // 設定目前使用者id
+                            var uid = userToken.id;
+                        } else {
+                            Swal.fire({
+                                title: '請先登入會員',
+                                icon: 'warning',
+                                showConfirmButton: false,
+                                timer: 1500
+                            }).then(
+                                setTimeout(()=>{
+                                    document.location.href = "/login/userlogin"
+                                },2000)
+                            )
+                        }
 
                     // 連結訂單資料表 vgorder
                     $.get(`/order/items/${uid}`, function (e) {
