230911 09:00 筱逵-資料庫

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -195,7 +195,11 @@
                                 "Content-Type": "application/json;charset=UTF-8"
                             },
                             body: JSONData
-                        });
+                        })
+
+                        setTimeout(function(){
+                                location.reload();
+                            }, 1000);
                     }
 
 
