--- a/views/login.ejs
+++ b/views/login.ejs
@@ -85,10 +85,11 @@
                                 .then(function (jsonObj) {
                                     // console.log(jsonObj.data.token);
                                     var newToken = JSON.stringify(jsonObj.data);
-                                    // console.log(dataToken);
+                                    var cookieToken = JSON.stringify(jsonObj.data.token);
+                                    var now = new Date();
+                                    var expirationTime = new Date(now.getTime() + 1 * 24 * 60 * 60 * 1000);
+                                    document.cookie = `token=${cookieToken}; expires=${expirationTime.toUTCString()}; Domain=127.0.0.1; path=/; port=2407`;
                                     localStorage.setItem('token', newToken);
-                                    var getData = localStorage.getItem('token');
-                                    console.log(getData);
                                     setTimeout(function () {
                                         location.href = "/";
                                     }, 2000);
